--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 # Project
 applicationId = "ru.blays.ficbook.reader"
-projectVersion = "1.1.0"
-versionCode = "26"
-versionNameSuffix = " "
+projectVersion = "1.1.1"
+versionCode = "27"
+versionNameSuffix = "-RC1"
 kotlin = "2.0.21"
 agp = "8.7.3"
 jvmTarget = "18"
